manifests/reaper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reaper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reaper-service
  template:
    metadata:
      labels:
        app: reaper-service
    spec:
      serviceAccountName: pod-manager-sa 
      containers:
      - name: reaper
        image: reaper-service:latest
        imagePullPolicy: Never
