manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: worker-service
  template:
    metadata:
      labels:
        app: worker-service
    spec:
      serviceAccountName: pod-manager-sa 
      containers:
      - name: worker
        image: worker-service:latest
        imagePullPolicy: Never
