manifests/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway
        image: gateway-service:latest
        imagePullPolicy: Never 
        ports:
        - containerPort: 80 
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-http
spec:
  selector:
    app: gateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
